# xinguang

./: .env.example  .gitignore  README.md  SSL_SETUP.md  docker-compose.yml  start.ps1
data/speech-to-text/logs/: .gitkeep
data/speech-to-text/models/: .gitkeep
data/speech-to-text/uploads/: .gitkeep
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: __init__.py  create_htpasswd.py  deploy.ps1  deploy.sh  setup_ssl.ps1  setup_ssl.sh
services/jitsi/: .env.example  README.md  docker-compose.yml
services/speech-to-text/: .env.example  Dockerfile  README.md  entrypoint.sh  pyproject.toml
services/speech-to-text/app/: __init__.py  main.py
services/speech-to-text/app/static/: index.html
services/speech-to-text/shared/: __init__.py
services/speech-to-text/shared/config/: __init__.py  settings.py
services/speech-to-text/shared/models/: __init__.py  schemas.py
services/speech-to-text/shared/utils/: __init__.py  file_utils.py  logger_config.py  sensevoice_client.py
